# Nova

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  SUPPORT.md  build.rs  compressed_snark.json  flake.nix  rustfmt.toml  temp.rs
.github/workflows/: rust.yml
benches/: commit.rs  compressed-snark-supernova.rs  compressed-snark.rs  compute-digest.rs  msm.rs  pcs.rs  ppsnark.rs  recursive-snark-supernova.rs  recursive-snark.rs  sha256.rs  sumcheckeq.rs
examples/: and.rs  chainlink.rs  hashchain.rs  keygen.rs  kzg_keygen_tools.rs  minroot.rs  minroot_serde.rs  msm_bench.rs  ppot_prune.rs  ppsnark_bench.rs  ppsnark_profile.rs  profile_mercury.rs  profile_prove.rs  ptau_test_setup.rs  signature.rs  test_ser.rs
examples/ecdsa/: circuit.rs  main.rs  utils.rs
gpu/: gpu_sumcheck.cu  msm_parallel.cuh  sppark_msm.cu  sumcheck_kernels.cuh
nix/: rust.nix
scripts/: raw_to_csv_compressed_snark.py  raw_to_csv_recursive_snark.py  run_compressed_snark_bench.sh  run_recursive_snark_bench.sh
src/: .ipa.rs.swp  .lib.rs.swp  .r1cs.rs.swp  ccs.rs  circuit.rs  commitments.rs  constants.rs  digest.rs  errors.rs  gadgets.rs  hypercube.rs  ipa.rs  lib.rs  nifs.rs  parallel.rs  parallel_circuit.rs  parallel_prover.rs  pasta.rs  polynomial.rs  poseidon.rs  prover.rs  public_params.rs  r1cs.rs  snark.rs  sumcheck.rs  timer.rs  traits.rs  unsafe_serde.rs  utils.rs
src/bellpepper/: mod.rs  r1cs.rs  shape_cs.rs  solver.rs  test_shape_cs.rs
src/bellperson/: mod.rs  prover.rs  r1cs.rs  shape_cs.rs  solver.rs  test_shape_cs.rs
src/ccs/: cccs.rs  lcccs.rs  mod.rs  multifolding.rs
src/ccs/util/: mod.rs  virtual_poly.rs
src/frontend/: constraint_system.rs  lc.rs  mod.rs  r1cs.rs  shape_cs.rs  solver.rs  test_shape_cs.rs
src/frontend/gadgets/: boolean.rs  mod.rs  multieq.rs  num.rs  sha256.rs  uint32.rs
src/frontend/gadgets/poseidon/: circuit2.rs  circuit2_witness.rs  hash_type.rs  matrix.rs  mds.rs  mod.rs  poseidon_inner.rs  preprocessing.rs  round_constants.rs  round_numbers.rs  serde_impl.rs
src/frontend/gadgets/poseidon/sponge/: api.rs  circuit.rs  vanilla.rs
src/frontend/util_cs/: mod.rs  test_cs.rs  witness_cs.rs
src/gadgets/: ecc.rs  ecc_circuit.rs  mod.rs  r1cs.rs  ro.rs  utils.rs
src/gadgets/nonnative/: bignat.rs  mod.rs  util.rs
src/neutron/: ec.rs  mod.rs  nifs.rs  nifs_ec.rs  relation.rs
src/neutron/circuit/: ec.rs  mod.rs  nifs.rs  nifs_ec.rs  r1cs.rs  r1cs_ec.rs  relation.rs  scalarmul.rs  univariate.rs
src/neutron_nova/: mod.rs  nifs.rs  running_instance.rs  sumfold.rs  tests.rs
src/nova/: circuit.rs  constants.rs  mod.rs  nifs.rs
src/nova/circuit/: mod.rs  nifs.rs  r1cs.rs
src/poseidon/: mod.rs  params.rs
src/provider/: blitzar.rs  bn254_grumpkin.rs  bn256_grumpkin.rs  commitment_key_io.rs  curve_property_tests.rs  hyperkzg.rs  ipa_pc.rs  keccak.rs  kzg_commitment.rs  mercury.rs  mlkzg.rs  mod.rs  msm.rs  msm_no_std_impl.rs  non_hiding_kzg.rs  non_hiding_zeromorph.rs  pasta.rs  pasta_curves.rs  pedersen.rs  poseidon.rs  ptau.rs  secp_secq.rs  secpsecq.rs  sppark.rs  sppark_msm.rs  traits.rs
src/provider/field_ops/: bn254_ops.rs  challenge.rs  mod.rs  unreduced.rs
src/provider/poseidon/: circuit2.rs  circuit2_witness.rs  hash_type.rs  matrix.rs  mds.rs  mod.rs  poseidon_alt.rs  poseidon_inner.rs  preprocessing.rs  round_constants.rs  serde_impl.rs
src/provider/poseidon/sponge/: api.rs  circuit.rs  mod.rs  vanilla.rs
src/provider/test_utils/: mod.rs
src/provider/util/: fb_msm.rs  mod.rs
src/r1cs/: .mod.rs.swp  mod.rs  sparse.rs  util.rs  witness_program.rs
src/spartan/: batched.rs  batched_ppsnark.rs  direct.rs  gpu_sumcheck.rs  macros.rs  math.rs  mod.rs  polynomial.rs  pp.rs  ppsnark.rs  scalar_ops.rs  snark.rs  sumcheck.rs
src/spartan/polys/: compact.rs  eq.rs  identity.rs  masked_eq.rs  mlpoly.rs  mod.rs  multilinear.rs  power.rs  power2.rs  unipoly.rs  univariate.rs
src/spartan/polys/univariate/: gaussian_elimination.rs  mod.rs
src/spartan/pp/: mod.rs  product.rs
src/spartan/spark/: mod.rs  product.rs  sparse.rs
src/spartan_with_ipa_pc/: ipa.rs  mod.rs  polynomial.rs  sumcheck.rs
src/supernova/: Readme.md  circuit.rs  error.rs  mod.rs  snark.rs  test.rs  utils.rs
src/traits/: circuit.rs  circuit_supernova.rs  commitment.rs  evaluation.rs  evm_serde.rs  mod.rs  snark.rs
tests/: .test_bellperson_non_native.rs.swp  bit.rs  nimfs.rs  nonnative.rs  num.rs  test_alloc_bit.rs  test_bellperson_non_native.rs
