[package]
name = "nova-snark"
version = "0.40.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2021"
description = "High-speed recursive arguments from folding schemes"
documentation = "https://docs.rs/nova-snark/"
readme = "README.md"
repository = "https://github.com/Microsoft/Nova"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]
rust-version = "1.79.0"

[dependencies]
ff = { version = "0.13.0", features = [
    "derive",
    "bits",
], default-features = false }
digest = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
subtle = { version = "2.6.1", default-features = false }

generic-array = { version = "1.2.0", default-features = false }
num-bigint = { version = "0.4.6", features = [
    "serde",
    "rand",
], default-features = false }
num-traits = { version = "0.2.19", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
serde = { version = "1.0.217", features = ["derive"], default-features = false }
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "alloc",
    "derive",
    "serde",
] }
bitvec = { version = "1.0", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
itertools = { version = "0.14.0", default-features = false }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
libm = { version = "0.2.11", default-features = false }
hashbrown = { version = "0.15.2" }


# ! OPTIONAL 
rayon = { version = "1.10", optional = true, default-features = false }
plonky2_maybe_rayon = { version = "1.0.0", default-features = false }
halo2curves = { version = "0.8.0", features = [
    "bits",
    "derive_serde",
], optional = true }
once_cell = { version = "1.18.0", optional = true }
byteorder = { version = "1.4.3", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", default-features = false, features = [
    "js",
], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
flate2 = "1.0.35"
hex = "0.4.3"
pprof2 = { version = "0.13" }
cfg-if = "1.0.0"
sha2 = "0.10.7"
proptest = "1.6.0"
rand = "0.8.5"
expect-test = "1.5.1"

[[bench]]
name = "recursive-snark"
harness = false

[[bench]]
name = "compressed-snark"
harness = false

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "ppsnark"
harness = false

[features]
default = ["std"]
std = [
    "halo2curves",
    "getrandom",
    "once_cell",
    "byteorder",
    "plonky2_maybe_rayon/parallel",
    "rayon",
]
asm = ["halo2curves/asm"]
flamegraph = ["pprof2/flamegraph", "pprof2/criterion"]
experimental = []
